[tool.poetry]
name = "project2-shakurov-m25-555"
version = "0.1.0"
description = "Primitive database developed as a part of the second project for the Python programming course"
authors = ["RazorRZZ <vanders97@mail.ru>"]
readme = "README.md"

packages = [
    { include = "src", from = "." },
]

[tool.poetry.dependencies]
python = "^3.12"
prompt = "^0.4.1"
prettytable = "^3.17.0"
asciinema = "^2.4.0"

[tool.poetry.scripts]
project = "src.primitive_db.main:main"

[tool.poetry.group.dev.dependencies]
ruff = "^0.14.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
target-version = "py312"
exclude = ["venv", ".venv", "dist", "__pycache__"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = [] 

